...
                        }
                        .buttonStyle(.plain)
                        .padding(.trailing, 14)
                        .padding(.leading, 3)
                    }

                    Text("RECOMMENDED SLEEP")
                        .font(.custom("DM Sans", size: 11))
                        .foregroundColor(Color.white.opacity(0.35))
                        .kerning(2.5)

                    Text(formattedDurationAttributed(recommendedHours, size: 44))
                        .foregroundColor(Color.white.opacity(0.95))
...
